clean code & add Faze2